<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/itemName"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:inputType="text"
            android:layout_marginTop="12dp"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:hint="@string/new_item_name"/>

        <EditText
            android:id="@+id/itemRating"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:inputType="numberDecimal"
            android:layout_marginTop="12dp"
            android:importantForAutofill="no"
            android:imeOptions="actionDone"
            android:hint="@string/default_value"/>

        <Button
            android:id="@+id/submitChanges"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="12dp"
            android:text="@string/submit_changes"/>

        <Button
            android:id="@+id/deleteItem"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:layout_marginTop="12dp"
            android:text="@string/delete_item"/>
    </LinearLayout>

</FrameLayout>