<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/noItemsYet"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/you_dont_have_any_items_in_this_list_yet"
            android:visibility="gone"
            android:importantForAutofill="no"/>

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="200dp">
        </ListView>

        <Button
            android:id="@+id/newElemButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_new_item"
            android:textAllCaps="true"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/deleteListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/delete_list"
            android:textAllCaps="true"
            android:layout_gravity="center"/>
    </LinearLayout>

</FrameLayout>