<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/newListButton"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/add_new_list"
            android:textAllCaps="true"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/clearFilter"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/clear_filter"
            android:textAllCaps="true"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/searchFilter"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:inputType="text"
            android:gravity="center"
            android:layout_margin="20dp"
            android:hint="@string/use_this_field_to_filter_lists"
            android:visibility="gone"
            android:importantForAutofill="no"
            android:imeOptions="actionSearch">
        </EditText>

        <TextView
            android:id="@+id/noListsYet"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/you_dont_have_any_rating_lists_yet"
            android:visibility="gone"
            android:importantForAutofill="no"/>

        <TextView
            android:id="@+id/currentFilter"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:visibility="gone"
            android:importantForAutofill="no"/>

        <ListView
            android:id="@+id/allRatingLists"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="10dp">
        </ListView>
    </LinearLayout>

</FrameLayout>
    </androidx.core.widget.NestedScrollView>